--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,17 @@
             <groupId>io.cucumber</groupId>
             <artifactId>cucumber-java</artifactId>
         </dependency>
+
+
+
+
+
+        <dependency>
+            <groupId>io.appium</groupId>
+            <artifactId>java-client</artifactId>
+            <version>9.4.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
